Aminur Islam Name Updated

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -46,7 +46,6 @@
     "career": "Career",
     "language": "Language"
   },
-
   "home": {
     "hero": {
       "title": "BIRDS OF EDEN",
@@ -61,13 +60,24 @@
     },
     "service": {
       "stats": [
-        { "value": "5+", "label": "Clients" },
-        { "value": "10+", "label": "Projects" },
-        { "value": "1k+", "label": "Subscribers" },
-        { "value": "5+", "label": "Clients" }
+        {
+          "value": "5+",
+          "label": "Clients"
+        },
+        {
+          "value": "10+",
+          "label": "Projects"
+        },
+        {
+          "value": "1k+",
+          "label": "Subscribers"
+        },
+        {
+          "value": "5+",
+          "label": "Clients"
+        }
       ]
     },
-
     "erpProjects": {
       "title": "Our ERP Projects",
       "button": "Go Back",
@@ -98,7 +108,6 @@
         }
       ]
     },
-
     "ormSection": {
       "title": "AI Based Online Reputation and Back Office Management",
       "description": "Manage your online reputation to build trust, engage with your audience, and enhance your brand's image.",
@@ -219,52 +228,72 @@
         {
           "title": "BD Weather Govt. Project",
           "description": "Advanced Weather Analytics Platform Our sophisticated dashboard provides comprehensive weather insights for Bangladesh with precision and clarity.",
-          "images": ["BDW1.png", "BDW2.png", "BDW3.png"],
+          "images": [
+            "BDW1.png",
+            "BDW2.png",
+            "BDW3.png"
+          ],
           "deploymentUrl": "https://www.bmdcl17.com/"
         },
         {
           "title": "Islami Dawa Institute",
           "description": "Islami Dawah is a Next.js (App Router) + TypeScript application for coordinating and reporting Islamic outreach activities. It features role-based dashboards (admin, dayi/ambassador, assistant, and user).",
-          "images": ["ISD1.jpeg", "ISD2.jpeg", "ISD3.jpeg"],
+          "images": [
+            "ISD1.jpeg",
+            "ISD2.jpeg",
+            "ISD3.jpeg"
+          ],
           "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
         },
         {
           "title": "Moving Quote New York",
           "description": "Moving Quote New York provides end-to-end relocation services across NY. The platform matches customers with reliable movers, offers instant quotes, tracks moving progress in real-time, and provides comprehensive moving resources to ensure a stress-free experience.",
-          "images": ["MQT1.png", "MQT2.png", "MQT3.png"],
+          "images": [
+            "MQT1.png",
+            "MQT2.png",
+            "MQT3.png"
+          ],
           "deploymentUrl": "https://movingquotenewyork.com/"
-
         },
-     {
+        {
           "title": "Hilful Fuzul — Book Shop",
           "description": "Hilful Fuzul is a Next.js (App Router) + TypeScript e-commerce platform tailored for books and publishers. It includes role-based admin interfaces for managing products, writers, publishers, and orders; a customer-facing storefront with category browsing, search, cart and wishlist; and a checkout flow with payment processing. ",
-          "images": ["KG2.png", "KG1.png", "KG3.png"],
+          "images": [
+            "KG2.png",
+            "KG1.png",
+            "KG3.png"
+          ],
           "deploymentUrl": "https://hilfulfujulbd.com/"
-
         },
-       {
+        {
           "title": "Moving Quote New York",
           "description": "Moving Quote New York provides end-to-end relocation services across NY. The platform matches customers with reliable movers, offers instant quotes, tracks moving progress in real-time, and provides comprehensive moving resources to ensure a stress-free experience.",
-          "images": ["MQN1.png", "MQT2.png", "MQT3.png"],
+          "images": [
+            "MQN1.png",
+            "MQT2.png",
+            "MQT3.png"
+          ],
           "deploymentUrl": "https://movingquotenewyork.com/"
-
-
         },
-       {
+        {
           "title": "Net Reputation Task Management System",
           "description": "Net Reputation Task Management System is a Next.js (App Router) + TypeScript platform for running end-to-end client ops. It includes role-specific dashboards (admin, AM/CEO, agent, QC, data-entry, client), task & QC workflows with pause reasons and performance scoring.",
-          "images": ["NR1.png", "NR2.png", "NR3.png"],
+          "images": [
+            "NR1.png",
+            "NR2.png",
+            "NR3.png"
+          ],
           "deploymentUrl": "http://app.netreptask.com/"
-
-
         },
-       {
+        {
           "title": "Reputation Prime",
           "description": "Reputation Prime Task Management System is a Next.js (App Router) + TypeScript platform for running end-to-end client ops. It includes role-specific dashboards (admin, AM/CEO, agent, QC, data-entry, client), task & QC workflows with pause reasons and performance scoring.",
-          "images": ["RP1.png", "RP2.png", "RP3.png"],
+          "images": [
+            "RP1.png",
+            "RP2.png",
+            "RP3.png"
+          ],
           "deploymentUrl": "https://reputationtask.com/"
-
-
         },
         {
           "title": "Gravionne - Elevating Health, Wellness & Humanity",
@@ -275,46 +304,54 @@
         {
           "title": "AIBL Leave Management System",
           "description": "This project is a Smart Attendance Management System developed for Al-Arafah Islami Bank PLC to monitor and manage employee attendance in real time. The system provides a dynamic dashboard displaying total active employees, present, late, absent, and on-duty staff with percentage insights.",
-          "images": ["AIBL1.jpeg", "AIBL2.jpeg"],
+          "images": [
+            "AIBL1.jpeg",
+            "AIBL2.jpeg"
+          ],
           "deploymentUrl": "https://aibl-plc.vercel.app/"
-
-
         },
         {
           "title": "Ecomonitor System",
           "description": "EcoMonitor is a smart environmental monitoring system that provides real-time weather insights and analytics. It displays key metrics such as temperature, humidity, wind speed, pressure, UV index, and precipitation through interactive dashboards and visual charts. The platform features trend analysis, animated data visualization, and system alerts like high UV warnings to support proactive decision-making. With modules for weather monitoring, water quality tracking, reports, and user management, EcoMonitor ensures accurate data tracking and efficient environmental analysis in a modern, user-friendly interface.",
-          "images": ["EM1.jpeg","EM2.jpeg","EM3.jpeg","EM4.jpeg"],
+          "images": [
+            "EM1.jpeg",
+            "EM2.jpeg",
+            "EM3.jpeg",
+            "EM4.jpeg"
+          ],
           "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
-
-
         },
         {
           "title": "DNA Report System",
           "description": "DNA Archive is a centralized laboratory management system that tracks cases, samples, reports, storage, and user activity. It provides real-time analytics, system monitoring, and streamlined workflows for efficient forensic data management.",
-          "images": ["DNA1.png"],
+          "images": [
+            "DNA1.png"
+          ],
           "deploymentUrl": "https://dna-case-management.vercel.app/login"
-
         },
         {
           "title": "Real Estate Management System",
           "description": "This real estate company platform is designed to manage property listings and user interactions with distinct roles for admins, agents, and clients. Admins can oversee all operations, manage users and properties; agents can add and manage their property listings; while users can browse, filter, and inquire about properties. The system ensures secure role-based access, multilingual support, and smooth communication between all parties involved.",
-          "images": ["RE1.png"],
+          "images": [
+            "RE1.png"
+          ],
           "deploymentUrl": "https://real-estate-admin-jade.vercel.app/en"
-
         },
         {
           "title": "PCO Training",
           "description": "PCO Training is a specialized platform for professional drivers in the UK. It offers comprehensive training modules, practice tests, and certification preparation to help drivers meet regulatory requirements and improve their skills.",
-          "images": ["PCO1.png"],
+          "images": [
+            "PCO1.png"
+          ],
           "deploymentUrl": "https://uk-driving-course.vercel.app/en"
-
         },
         {
           "title": "Fraud Detection System",
           "description": "This project is a fraud review and verification system designed to analyze and validate business review activities. It displays detailed business profiles with location mapping, contact information, ratings, and review statistics. The platform tracks total reviews, reviewers, and average reviews per person to identify suspicious patterns. With features like rescan, status tracking, PDF export, and request management, the system helps detect fraudulent behavior, ensures data authenticity, and supports informed decision-making for review moderation and compliance.",
-          "images": ["FD1.jpeg"],
+          "images": [
+            "FD1.jpeg"
+          ],
           "deploymentUrl": "https://review.reputationtask.com/login"
-
         }
       ]
     },
@@ -402,7 +439,11 @@
           "name": "Royal Opera House Muscat",
           "description": "The Royal Opera House Muscat is Oman's premier venue for musical and cultural performances, promoting artistic excellence.",
           "logo": "ROHM.png",
-          "services": ["Performing Arts", "Cultural Events", "Music Education"],
+          "services": [
+            "Performing Arts",
+            "Cultural Events",
+            "Music Education"
+          ],
           "testimonial": "The Royal Opera House Muscat is a cultural gem, bringing world-class performances to Oman."
         },
         {
@@ -571,7 +612,6 @@
         "text": "Optimizing Daily Operations with LLM-based Solutions - Drive down daily operational costs by implementing LLM-based solutions to support routine operations. This is additional text for the card that will be revealed when the button is clicked."
       }
     ],
-
     "ourServices": {
       "title": "Regular Services",
       "services": [
@@ -638,7 +678,6 @@
       ],
       "footer": "Partner with us to bring your iOS app ideas to life and leave a lasting impression on your users in the ever-growing iOS ecosystem."
     },
-
     "mobileApp": {
       "title": "Mobile App Solutions",
       "header": "BIRDS OF EDEN offers comprehensive mobile app solutions to empower your business with responsive and feature-rich applications across platforms.",
@@ -849,7 +888,6 @@
     "backlinkMonitoring": "Backlink monitoring",
     "seoBoost": "Boost your clients' search engine rankings and drive more organic traffic with our expert solutions."
   },
-
   "JobPostPage": {
     "title": "Join Our Team",
     "applyButton": "Apply Now",
@@ -907,7 +945,7 @@
         "role": "Co-Founder & CEO"
       },
       {
-        "name": "Md. Amenul Islam",
+        "name": "Md. Aminur Islam",
         "role": "CTO"
       }
     ]
@@ -927,10 +965,10 @@
         "description": "Talat Md. Tawfik Elahi is a visionary leader driving strategic growth and excellence. With a forward-thinking approach, he anticipates market shifts and navigates challenges with agility. His leadership bridges strategy and execution, ensuring organizational success."
       },
       {
-        "name": "Md. Amenul Islam",
+        "name": "Md. Aminur Islam",
         "role": "CTO",
         "portfolioLink": "https://talat-me.vercel.app/",
-        "description": "Md. Amenul Islam is a strategic innovator leading operational efficiency and growth. He combines visionary thinking with practical execution to achieve business goals. His foresight enables the organization to adapt and thrive in a dynamic landscape."
+        "description": "Md. Aminur Islam is a strategic innovator leading operational efficiency and growth. He combines visionary thinking with practical execution to achieve business goals. His foresight enables the organization to adapt and thrive in a dynamic landscape."
       }
     ],
     "descriptionTitle": "Description",
@@ -963,7 +1001,7 @@
       "amenul": {
         "role": "Chief Technology Officer",
         "quote": "We architect resilient platforms that combine clean backends, AI models, and industrial-grade hardware uplifts.",
-        "bio": "Md. Amenul Islam is the dynamic and forward-thinking CEO of Ann-Nahl, a pioneering company dedicated to transforming the digital landscape through innovative solutions. With a deep understanding of technology and a passion for driving change, Amenul has steered Ann-Nahl towards becoming a leader in the industry. Under his leadership, the company has expanded its reach, offering cutting-edge services and exceptional client experiences. Amenul’s commitment to innovation, strategic vision, and strong leadership continues to drive the success of Ann-Nahl, making him a key figure in shaping the future of the company and its industry.",
+        "bio": "Md. Aminur Islam is the dynamic and forward-thinking CEO of Ann-Nahl, a pioneering company dedicated to transforming the digital landscape through innovative solutions. With a deep understanding of technology and a passion for driving change, Amenul has steered Ann-Nahl towards becoming a leader in the industry. Under his leadership, the company has expanded its reach, offering cutting-edge services and exceptional client experiences. Amenul’s commitment to innovation, strategic vision, and strong leadership continues to drive the success of Ann-Nahl, making him a key figure in shaping the future of the company and its industry.",
         "pillars": [
           "Microservice & AI model governance",
           "Security-first DevOps",
@@ -1006,7 +1044,6 @@
         "expButton": "Explore Collections"
       }
     },
-
     "netTitle": "Networking & Tech Solutions",
     "netDescription": "High-performance gear for seamless connectivity and productivity.",
     "networkingAndTech": [
@@ -1027,7 +1064,6 @@
       }
     ]
   },
-
   "contact": {
     "contactUs": "Contact Us",
     "name": "Name",
@@ -1042,7 +1078,6 @@
     "errorMessage": "There was an error sending the message!",
     "errorAlert": "Failed to send message."
   },
-
   "footer": {
     "companyDescription": "BIRDS OF EDEN is a pioneering software company dedicated to transforming innovative ideas into reality.",
     "importantLinks": "Important Links",
